[package]
name = "advent_of_code_2022"
version = "0.1.0"
authors = ["Christopher Luu <nuudles@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
lazy_static = "1.4.0"
counter = "0.5.7"
itertools = "0.10.5"
pathfinding = "3.0.14"
cached = "0.40.0"
gcd = "2.1.0"
mod_exp = "1.0.1"
